apollo-router/src/services/supergraph/snapshots/apollo_router__services__supergraph__tests__subscription_max_lifetime_exceeded.snap
---
source: apollo-router/src/services/supergraph/tests.rs
expression: stream.next_response().await.unwrap()
---
{
  "data": null
}
