apollo-router/src/services/supergraph/snapshots/apollo_router__services__supergraph__tests__subscription_with_callback-3.snap
---
source: apollo-router/src/services/supergraph/tests.rs
expression: stream.next_response().await.unwrap()
---
{
  "errors": [
    {
      "message": "cannot fetch the name",
      "extensions": {
        "code": "INVALID"
      }
    }
  ],
  "data": {
    "userWasCreated": null
  }
}
