apollo-router/src/services/supergraph/snapshots/apollo_router__services__supergraph__tests__subscription_with_callback_with_limit-4.snap
---
source: apollo-router/src/services/supergraph/tests.rs
expression: res
---
{
  "errors": [
    {
      "message": "can't open new subscription, limit reached",
      "extensions": {
        "code": "SUBSCRIPTION_MAX_LIMIT"
      }
    }
  ],
  "data": null
}
