apollo-router/src/services/supergraph/snapshots/apollo_router__services__supergraph__tests__subscription_with_callback_with_limit.snap
---
source: apollo-router/src/services/supergraph_service.rs
expression: res
---
{
  "data": null
}
