apollo-router/src/services/supergraph/snapshots/apollo_router__services__supergraph__tests__subscription_without_header.snap
---
source: apollo-router/src/services/supergraph/tests.rs
expression: res
---
{
  "errors": [
    {
      "message": "the router received a query with a subscription but the client does not accept multipart/mixed HTTP responses. To enable subscription support, add the HTTP header 'Accept: multipart/mixed; subscriptionSpec=1.0'",
      "extensions": {
        "code": "SUBSCRIPTION_BAD_HEADER"
      }
    }
  ]
}
